Added steps in cleanup stage

--- a/multi-branch-pipeline/Jenkinsfile
+++ b/multi-branch-pipeline/Jenkinsfile
@@ -10,8 +10,10 @@ pipeline {
 
     stages {
         stage('Cleanup workspace') {
-            cleanWs()
-            bat 'echo Cleaned up workspace for project'
+            steps {
+                cleanWs()
+                bat 'echo Cleaned up workspace for project'
+            }
         }
 
         stage('Checkout scm') {
